fixed test cases
git-svn-id: https://svn.micromata.de/svn/projectforge/webapp/trunk@12948 be79319d-3443-0410-9b0a-b0c1b946f33b